<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUpActivity.SignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/signup_details"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/name_signu"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/user_name"
        android:paddingLeft="20dp" />
    <EditText
       android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/user_email"
        android:paddingLeft="20dp"
        android:id="@+id/email_signup"/>
    <EditText
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/user_mobile_no"
        android:paddingLeft="20dp"
        android:id="@+id/mobile_error"/>
    <EditText
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/user_address"
        android:paddingLeft="20dp"
        android:id="@+id/address_error"/>
        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password_hint"
            android:paddingLeft="20dp"
            android:id="@+id/password_signup"/>
    <EditText
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/confirm_password"
        android:paddingLeft="20dp"
        android:id="@+id/comfirm_password_signup"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cornerRadius="25dp"
        android:layout_margin="20dp"
        android:text="@string/sign_up"
        android:onClick="signup_main"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/already_account"
                android:gravity="center"/>
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/mid_green_200"
                android:onClick="login_signup"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>