<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUpActivity.OtpActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_head_quotes"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_qutoes_number"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center"
        android:textColor="@color/white" />
    <EditText
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/otp_hint"
        android:paddingLeft="20dp"
        android:id="@+id/email_reset"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cornerRadius="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/next_btn"
        android:textColor="@color/black"
        android:onClick="otp_btn_click"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/dont_recive" />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mid_green_200"
            android:text="@string/clickme"
            android:onClick="otp_reciver"
            />

    </LinearLayout>

</LinearLayout>