<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUpActivity.LogInActivity"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:padding="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_details"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:padding="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email_or_number_hint"
            android:paddingLeft="20dp"
            android:id="@+id/login_mail"/>

        <EditText
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password_hint"
            android:paddingLeft="20dp"
            android:id="@+id/password_login"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cornerRadius="25dp"
            android:layout_margin="20dp"
            android:text="@string/login"
            android:onClick="login_single"
            android:id="@+id/login_single"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:id="@+id/forget_password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/dont_have_account"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up"
                android:textColor="@color/mid_green_200"
                android:onClick="signup_inLogin"
                />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>