<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUpActivity.ResetActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="40dp"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/reset_quotes"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/email_hint"
        android:paddingLeft="20dp"
        android:id="@+id/email_reset"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cornerRadius="25dp"
        android:layout_margin="20dp"
        android:text="@string/login"
        android:onClick="reset_click"
        />

</LinearLayout>