<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUpActivity.FinalStepUpActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/slider01"
        android:layout_margin="50dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findfoodyoulove"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food_truck_id_quotes"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="15dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cornerRadius="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/next_btn"
        android:textColor="@color/black"
        android:onClick="finalstep"/>

</LinearLayout>